<resources>
    <string name="app_name">MyTraining</string>
    <string name="IMCApp">Indice de masa corporal (IMC)</string>
    <string name="TODOApp">Lista de tareas</string>
    <string name="superherosApp">Consultar superheroes</string>
    <string name="OtherApp">Otra App</string>


    <!--IMC_APP-->
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="addAge">Agregar un año</string>
    <string name="subtractAge">Quitar un año</string>
    <string name="addWeight">Agregar un kilo</string>
    <string name="subtractWeight">Quitar un kilo</string>
    <string name="calculate">Calcular</string>
    <string name="reCalculate">Volver a calcular</string>
    <string name="resultado_obtenido">Su resultado</string>
    <string name="very_severe_thinness">Delgadez muy severa</string>
    <string name="severe_thinness">Delgadez severa</string>
    <string name="thinness">Delgadez</string>
    <string name="Healthy_weight">Peso saludable</string>
    <string name="over_weight">Sobrepeso</string>
    <string name="moderate_obesity">Obesidad moderada</string>
    <string name="severe_obesity">Obesidad severa</string>
    <string name="very_severe_obesity">Obesidad muy severa</string>

    <string name="_ErrorIMC">Hubo un error en el cálculo</string>

    <!--TODO_APP-->

    <string name="todoTitle">Tareas pendientes</string>
    <string name="todoCategories">Categories</string>
    <string name="todoList">Tareas</string>
    <string name="todo_add_task">Añade una tarea</string>
    <string name="todo_business">Negocios</string>
    <string name="todo_personal">Personal</string>
    <string name="todo_other">Otros</string>
    <string name="todo_domestic">Familiar</string>
    <string name="todo_new_task">Nueva tarea</string>

    <!--SUPERHERO_APP-->

    <string name="super_searchBar">Search superhero.... (english)</string>
    <string name="super_intelligence">Intelligence</string>
    <string name="super_strength">Strength</string>
    <string name="super_speed">Speed</string>
    <string name="super_durability">Durability</string>
    <string name="super_power">Power</string>
    <string name="super_combat">Combat</string>
    <string name="super_publisher">Publisher:</string>
    <string name="super_first_appearance">First appearance:</string>
    <string name="super_btn_back">Back</string>
    <string name="super_help">"Write a part of or all superhero's name."</string>

    <!--Settings_APP-->
    <string name="settingssApp">Configuración</string>
    <string name="setting_modo_oscuro">Modo oscuro</string>
    <string name="descripcion_del_modo">Descripcion del modo</string>
    <string name="setting_wifi">WIFI</string>
    <string name="activa_wifisetting_">Activa o desactiva acceso a WIFI</string>
    <string name="setting_ajustes_sonido">Ajustes del nivel de sonido (sólo ejemplo)</string>
    <string name="setting_advertencia">IMPORTANTE: Solo tienen funcionalidad el DarkMode y la WIFI</string>
    <string name="setting_vibration">Vibrar en las llamadas (sin funcionalidad</string>


</resources>
