<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="?colorSecondaryContainer"
    android:orientation="vertical"
    android:elevation="12dp"
    android:padding="16dp">

    <EditText
        android:id="@+id/todo_etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorTertiary"
        android:hint="@string/todo_add_task"
        android:textColor="?colorOnSecondaryContainer"
        android:textSize="20sp" />

    <!--TODO refactoring Hardcoded rules-->
    <RadioGroup
        android:id="@+id/todo_rbgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/todo_rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/todo_business"
            android:textColor="?colorOnSecondaryContainer"
            app:buttonTint="@color/todo_business_category" />

        <RadioButton
            android:id="@+id/todo_rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_personal"
            android:textColor="?colorOnSecondaryContainer"
            app:buttonTint="@color/todo_personal_category" />

        <RadioButton
            android:id="@+id/rbDomestic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_domestic"
            android:textColor="?colorOnSecondaryContainer"
            app:buttonTint="@color/todo_domestic_category" />

        <RadioButton
            android:id="@+id/todo_rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_other"
            android:textColor="?colorOnSecondaryContainer"
            app:buttonTint="@color/todo_other_category" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/todo_btnNewTask"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorSecondary"
        android:elevation="16dp"
        android:text="@string/todo_new_task"
        android:textColor="?colorOnSecondary"
        app:cornerRadius="10dp" />

</LinearLayout>