<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/todo_background_app"
    android:orientation="vertical"
    tools:context=".todo_app.TodoMainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginVertical="44dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/todoTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:textAllCaps="true"
        android:textColor="@color/todo_subtitle_text"
        android:textSize="16sp"
        android:text="@string/todoCategories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32sp"
        android:textAllCaps="true"
        android:textColor="@color/todo_subtitle_text"
        android:textSize="16sp"
        android:text="@string/todoList" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"

         />

</androidx.appcompat.widget.LinearLayoutCompat>


