<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".IMCapp.ImcMainActivity">

    <!-- Card cardMale -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/cardFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/baseline_male_24"
                android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Card cardFemale -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"

        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardMale"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/baseline_female_24"
                android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Card cardHeight -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardHeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:backgroundTint="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardMale"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120.0"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rgHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:value="120.0"
                android:valueFrom="120"
                android:valueTo="230">

            </com.google.android.material.slider.RangeSlider>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--    Card Weight -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:backgroundTint="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/cardAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <!-- BtnCommand Weight -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/subtractWeight"
                    android:src="@drawable/baseline_remove_24"
                    app:backgroundTint="@color/background_button"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAddWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/addWeight"
                    android:src="@drawable/baseline_add_24"
                    app:backgroundTint="@color/background_button"
                    app:tint="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Card cardAge  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardAge"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginVertical="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"

        android:backgroundTint="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardWeight"
        app:layout_constraintTop_toBottomOf="@+id/cardHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="60" />

            <!-- BtnCommand Age -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/subtractAge"
                    android:src="@drawable/baseline_remove_24"
                    app:backgroundTint="@color/background_button"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAddAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/addAge"
                    android:src="@drawable/baseline_add_24"
                    app:backgroundTint="@color/background_button"
                    app:tint="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- btn btnCalculator   -->
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        app:backgroundTint="@color/background_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardWeight"
        app:layout_constraintVertical_bias="0.3"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>