<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".superheros_app.DetailSuperheroActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="?colorSecondary"
        android:contentDescription="volver"
        android:src="@android:drawable/ic_media_previous"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:pressedTranslationZ="12dp"
        app:tint="?colorOnSecondary" />
    <!--    app:tint para el svg -->
    <!--    android:backgrounTint para el elemento -->
    <!--    app:cardBackgroundColor= para las cards-->

    <ImageView
        android:id="@+id/ivSuperhero"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--   android:layout_marginBottom="-42dp" -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="-42dp"

        app:cardCornerRadius="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/superhero_item_name"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvSuperheroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/superhero_text_on_card"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="tvSuperheroName" />


            <TextView
                android:id="@+id/tvSuperheroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/superhero_text_on_card"
                android:textSize="18sp"
                android:textStyle="italic|bold"
                tools:text="tvSuperheroRealName" />

            <!--Barras-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:id="@+id/viewIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_bars"
                    tools:layout_height="60dp" />

                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_bars"
                    tools:layout_height="40dp" />

                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_bars"
                    tools:layout_height="80dp" />

                <View
                    android:id="@+id/viewDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_bars"
                    tools:layout_height="20dp" />

                <View
                    android:id="@+id/viewPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_bars"
                    tools:layout_height="10dp" />

                <View
                    android:id="@+id/viewCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_bars"
                    tools:layout_height="100dp" />


            </LinearLayout>

            <!--Etiquetas-->
            <LinearLayout
                android:id="@+id/powersStatsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvIntelligence"
                    style="@style/super_text_power_stats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/super_intelligence"
                    android:textColor="@color/superhero_text_on_card" />

                <TextView
                    android:id="@+id/tvStrength"
                    style="@style/super_text_power_stats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/super_strength"
                    android:textColor="@color/superhero_text_on_card" />

                <TextView
                    android:id="@+id/tvSpeed"
                    style="@style/super_text_power_stats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/super_speed"
                    android:textColor="@color/superhero_text_on_card" />

                <TextView
                    android:id="@+id/tvDurability"
                    style="@style/super_text_power_stats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/super_durability"
                    android:textColor="@color/superhero_text_on_card" />

                <TextView
                    android:id="@+id/tvPower"
                    style="@style/super_text_power_stats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/super_power"
                    android:textColor="@color/superhero_text_on_card" />

                <TextView
                    android:id="@+id/tvCombat"
                    style="@style/super_text_power_stats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/super_combat"
                    android:textColor="@color/superhero_text_on_card" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="60dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/super_publisher"

                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvPublisher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:textSize="18sp"
                        tools:text="tvPublisher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="8dp"
                        android:text="@string/super_first_appearance"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFirstAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        tools:text="tvFirstAppearance" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>